--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,5 +1,5 @@
 [data-md-color-scheme="ohsu"] {
-    --md-primary-fg-color:        #56b146;
-    --md-primary-fg-color--light: #56b146;
+    --md-primary-fg-color:        #585E60;
+    --md-primary-fg-color--light: #585E60;
     --md-primary-fg-color--dark:  #404040;
   }
